syntax = "proto3";

package message;

// Worker -> Master
message EstablishRequest {
    string workerIp = 1;
    int32 workerPort = 2;
}

// Master -> Worker
message EstablishResponse {
    bool isEstablishmentSuccessful = 1;
}