syntax = "proto3";

package message;

import "common.proto";

service SamplingService {
    rpc PerformSampling (SampleRequest) returns (stream SampleResponse);
}

// Master -> Worker 
message SampleRequest {
    string workerIp = 1;
    int32 workerPort = 2;

    int32 percentageOfSampling = 3;
}

// Worker -> Master
message SampleResponse {
    bool isSampliingSuccessful = 1;

    // Data chunk of keys
    DataChunk sample = 3;
}