syntax = "proto3";

package message;

import "common.proto";

service VerificationService {
    rpc VerifyKeyRange (VerificationRequest) returns (VerificationResponse);
}

// Master -> Worker
message VerificationRequest {
    string workerIp = 1;
    int32 workerPort = 2;
}

// Worker -> Master
message VerificationResponse {
    bool isVerificationSuccessful = 1;
    KeyRange range = 2;
}